--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -30,7 +30,9 @@
         height: 100%;
         
         img {
+            object-fit: cover;
             height: 220px;
+            width: 220px;
             border-radius: 50%;
             margin: 33.5px;
         }
