--- a/frontend/src/styles/Base.scss
+++ b/frontend/src/styles/Base.scss
@@ -5,6 +5,8 @@ body {
 
 $color_header: #6200E8;
 $color_lime: #D4FFC9;
+$color_gray_info: #666666;
+$color_gray_text: #BABABA;
 
 .buttons {
     text-decoration: none;
@@ -13,4 +15,10 @@ $color_lime: #D4FFC9;
 
     font-size: 20px;
     line-height: 24px;
+}
+
+.main_text {
+    font-size: 60px;
+    text-align: center;
+    margin: 80px 0;
 }
