--- a/frontend/src/styles/Header.scss
+++ b/frontend/src/styles/Header.scss
@@ -1,7 +1,7 @@
 @import "./Base.scss";
 
 #header {
-    background-color: $color_header;
+    background-color: $color_purple_header;
     height: 80px;
 
     li {
