--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -13,7 +13,7 @@
     //     display: flex;
     // }
     .doctor_card {
-        background-color: $color_lime;
+        background-color: $color_lime_card;
         height: 420px;
         width: 620px;
         border-radius: 30px;
@@ -61,7 +61,7 @@
 
             a {
                 color: white;
-                background-color: $color_header;
+                background-color: $color_purple_header;
                 display: block;
                 text-align: center;
                 word-break:keep-all;
