Added Booking page.

--- a/frontend/src/styles/Base.scss
+++ b/frontend/src/styles/Base.scss
@@ -9,6 +9,12 @@ $color_gray_info: #666666;
 $color_gray_text: #BABABA;
 $color_dark_input: #363636;
 $color_green_accept: #609C30;
+$color_green_cancel: #AF6767;
+$color_blue_calendar: #0061F3;
+$color_gray_calendar: #CCC;
+$color_dark_gray_calendar: #636363;
+$color_lime_calendar: #C8FF9C;
+
 
 .buttons {
     text-decoration: none;
