--- a/frontend/src/styles/Booking.scss
+++ b/frontend/src/styles/Booking.scss
@@ -92,4 +92,137 @@
         width: 150px;
     }
 
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    li {
+        width: 70px;
+        flex-basis: 50%;
+        margin: 0;
+
+    }
+
+    .hour_column {
+        background-color: white;
+        width: 180px;
+        margin: auto;
+        margin-top: 20px;
+        height: 515px;
+        padding: 5px;
+    }
+
+    h6 {
+        color: white;
+        background-color: $color_blue_calendar;
+        margin: auto;
+        font-size: 19px;
+        width: 100%;
+        width: 60px;
+        padding: 10px;
+        margin-top: 8.5px;
+        cursor: pointer;
+    }
+
+    h6:hover {
+        background-color: $color_lime_calendar;
+        transition: transform 0.3s ease;
+        transform: scale(1.2);
+        border: 1px solid black;
+        color: black;
+    }
+
+    .selected {
+        background-color: rgb(8, 79, 8) !important;
+        transition: transform 0.3s ease;
+        transform: scale(1.5) !important;
+        border: 1px solid black;
+        color: white !important;
+    }
+
+    .confirmation {
+        height: 640px;
+        width: 1050px;
+        margin: auto;
+        background-color: white;
+        display: none;
+        padding: 10px;
+        border-radius: 30px;
+    }
+
+    .choice_text {
+        font-size: 60px;
+        line-height: 70px;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+
+    .datetime_div {
+        height: 200px;
+        width: 800px;
+        margin: 0 auto;
+        background-color: #F4F4F4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 30px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+        #datetime {
+            font-size: 48px;
+            color: black;
+            display: block;
+            margin: auto;
+        }
+    }
+
+    .buttons_div {
+        height: 50px;
+        margin: auto;
+        margin-top: 100px;
+        width: 800px;
+        display: flex;
+        justify-content: space-between;
+
+        .buttons {
+            height: 50px;
+            width: 330px;
+            color: white;
+            font-size: 24px;
+            line-height: 24px;
+            font-weight: bold;
+        }
+
+        .cancel_button {
+            background-color: $color_green_cancel;
+        }
+
+        .accept_button {
+
+        }
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.prevent_select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  }
