Added login options for 3 user roles.

--- a/frontend/src/styles/Base.scss
+++ b/frontend/src/styles/Base.scss
@@ -14,6 +14,8 @@ $color_blue_calendar: #0061F3;
 $color_gray_calendar: #CCC;
 $color_dark_gray_calendar: #636363;
 $color_lime_calendar: #C8FF9C;
+$color_calendar_past: #636363;
+$color_calendar_reserved: #CCCCCC;
 
 
 .buttons {
