--- a/frontend/src/styles/Booking.scss
+++ b/frontend/src/styles/Booking.scss
@@ -208,18 +208,13 @@
     }
 }
 
+.past {
+    background-color: $color_calendar_past;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.reserved {
+    background-color: $color_calendar_reserved;
+}
 
 .prevent_select {
     -webkit-user-select: none; /* Safari */
