--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -1,8 +1,48 @@
+@import './Base.scss';
+
 .login_text {
+    width: 500px;
+    display: block;
+    margin: 30px auto 100px !important;
     margin-top: 120px;
     margin-bottom: 110px;
 }
 
 .login_accept {
     margin-top: 70px;
+}
+
+.login_buttons {
+    display: flex;
+    width: 420px;
+    margin: 20px auto 50px;
+
+    a {
+        color: white;
+        padding: 20px;
+        text-decoration: none;
+        border-radius: 30px;
+        font-size: 30px;
+        margin: 30px auto;
+        text-align: center;
+        width: 150px;
+
+    }
+}
+
+
+.login_button_admin {
+    background-color: red;
+}
+
+.login_button_doctor {
+    background-color: blue;
+}
+
+.login_button_patient {
+    background-color: green;
+}
+
+.login_button_gray {
+    background-color: gray;
 }
