--- a/frontend/src/styles/Reservation.scss
+++ b/frontend/src/styles/Reservation.scss
@@ -1,6 +1,6 @@
 @import './Base.scss';
 
-#booking_page {
+#reservation_page {
     display: flex;
     span {
         width: 100px;
@@ -209,7 +209,9 @@
 }
 
 .past {
-    background-color: $color_calendar_past;
+    background-color: $color_calendar_past !important;
+    pointer-events: none;
+    
 }
 
 .reserved {
