Added other roles' headers.

--- a/frontend/src/styles/Header.scss
+++ b/frontend/src/styles/Header.scss
@@ -17,4 +17,10 @@
         height: 100%;
         margin: 0;
     }
+
+    .logout_button {
+        background-color: #D34747;
+        color: white;
+        font-weight: normal;
+    }
 }
