--- a/frontend/src/styles/MyData.scss
+++ b/frontend/src/styles/MyData.scss
@@ -37,12 +37,6 @@
         
     }
 
-    #chart_57723_1_ChartTitle {
-        font-size: 35px !important;
-        font-weight: bold !important;
-        margin-top: 40px;
-    }
-
     #chart_57723_1_AxisTitle_1, #chart_57723_1_AxisTitle_0 {
         font-size: 20px !important;
     }
@@ -56,8 +50,8 @@
         
     }
 
-    #chart_57723_2_ChartTitle {
-        font-size: 35px !important;
+    #chart_57723_1_ChartTitle, #chart_57723_2_ChartTitle, #chart_57723_3_ChartTitle {
+        font-size: 33px !important;
         font-weight: bold !important;
         margin-top: 40px;
     }
@@ -73,12 +67,6 @@
         margin: auto;
         height: 600px;
         
-    }
-
-    #chart_57723_3_ChartTitle {
-        font-size: 35px !important;
-        font-weight: bold !important;
-        margin-top: 40px;
     }
 
     #chart_57723_3_AxisTitle_1, #chart_57723_3_AxisTitle_0 {
