--- a/frontend/src/styles/NewData.scss
+++ b/frontend/src/styles/NewData.scss
@@ -49,27 +49,27 @@
             }
         }
 
-        .buttons_div {
-            height: 50px;
-            margin: auto;
-            margin-top: 100px;
-            width: 800px;
-            display: flex;
-            justify-content: space-between;
+        // .buttons_div {
+        //     height: 50px;
+        //     margin: auto;
+        //     margin-top: 100px;
+        //     width: 800px;
+        //     display: flex;
+        //     justify-content: space-between;
     
-            .buttons {
-                height: 50px;
-                width: 330px;
-                color: white;
-                font-size: 24px;
-                line-height: 24px;
-                font-weight: bold;
-            }
+        //     .buttons {
+        //         height: 50px;
+        //         width: 330px;
+        //         color: white;
+        //         font-size: 24px;
+        //         line-height: 24px;
+        //         font-weight: bold;
+        //     }
     
-            .cancel_button {
-                background-color: $color_green_cancel;
-            }
-        }
+        //     .cancel_button {
+        //         background-color: $color_green_cancel;
+        //     }
+        // }
 
 
         
