--- a/frontend/src/styles/Reservation.scss
+++ b/frontend/src/styles/Reservation.scss
@@ -1,6 +1,6 @@
 @import './Base.scss';
 
-#reservation_page {
+.reservation_page {
     display: flex;
     span {
         width: 100px;
@@ -196,6 +196,7 @@
             font-size: 24px;
             line-height: 24px;
             font-weight: bold;
+            border: none;
         }
 
         .cancel_button {
