--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -1,5 +1,12 @@
 @import './Base.scss';
 
+.google_login {
+    height: 200px;
+    width: 200px;
+    background-color: red;
+    color: white;
+}
+
 .login_text {
     width: 500px;
     display: block;
