--- a/frontend/src/styles/Base.scss
+++ b/frontend/src/styles/Base.scss
@@ -17,6 +17,9 @@ $color_lime_calendar: #C8FF9C;
 $color_calendar_past: #636363;
 $color_calendar_reserved: #CCCCCC;
 
+.hidden {
+    display: none;
+}
 
 .buttons {
     text-decoration: none;
