--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -1,10 +1,27 @@
 @import './Base.scss';
 
 .google_login {
-    height: 200px;
-    width: 200px;
-    background-color: red;
+    height: 330px;
+    width: 900px;
+    border-radius: 100px;
+    background-color: rgb(0, 81, 142);
     color: white;
+    position: absolute;
+    top: 400px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,0);
+    background: linear-gradient(45deg, #4285F4, #EA4335, #FABC05, #34A853);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    
+    h1 {
+        text-align: center;
+        line-height: 330px;
+        margin: 0;
+        font-size: 45px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }    
 }
 
 .login_text {
