--- a/frontend/src/styles/NewDoctor.scss
+++ b/frontend/src/styles/NewDoctor.scss
@@ -3,7 +3,6 @@
 #new_doctor_page {
 
     .main_text {
-        margin: 40px;
     }
 
     .input_container {
@@ -54,6 +53,8 @@
 
     .description_wrapper {
         margin-left: 50px;
+        margin-bottom: 20px;
+        margin-top: 20px;
     }
 
 
